--- a/.travis.yml
+++ b/.travis.yml
@@ -6,13 +6,10 @@ python:
   - '3.6'
 
 install: skip
-script:
-  - echo 'Default script step'
 
 jobs:
   include:
-    - stage: test
-      script:
+    - script:
         - pip install .
 
     - stage: deploy
