--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,8 @@ jobs:
     - stage: deploy
       if: branch = master
       script:
-        - export VERSION="${MAJOR_VERSION}.${MINOR_VERSION}.((${TRAVIS_BUILD_NUMBER} - ${BUILD_NUMBER_SHIFT}))"
+        - export VERSION="${MAJOR_VERSION}.${MINOR_VERSION}.$((${TRAVIS_BUILD_NUMBER} - ${BUILD_NUMBER_SHIFT}))"
         - echo "Deploying version ${VERSION}"
 
 env:
-  - MAJOR_VERSION=0
-  - MINOR_VERSION=0
-  - BUILD_NUMBER_SHIFT=5
+  - MAJOR_VERSION=0   MINOR_VERSION=0   BUILD_NUMBER_SHIFT=5
