--- a/examples/gunicorn/Dockerfile
+++ b/examples/gunicorn/Dockerfile
@@ -1,9 +1,12 @@
 FROM python:3.7-alpine
 
-ADD requirements.txt /tmp/requirements.txt
+ADD examples/gunicorn/requirements.txt /tmp/requirements.txt
 RUN pip install -r /tmp/requirements.txt
 
-ADD server.py config.py /var/flask/
+ADD . /tmp/latest
+RUN pip install -e /tmp/latest --upgrade
+
+ADD examples/gunicorn/server.py examples/gunicorn/config.py /var/flask/
 WORKDIR /var/flask
 
 ENV prometheus_multiproc_dir /tmp
