--- a/examples/wsgi/Dockerfile
+++ b/examples/wsgi/Dockerfile
@@ -1,11 +1,15 @@
 FROM httpd
 
 RUN apt-get update \
-    && apt-get install --no-install-recommends -y python python-dev python-pip gcc \
+    && apt-get install --no-install-recommends -y \
+        python python-dev python-setuptools python-pip gcc \
     && pip install mod_wsgi
 
-ADD requirements.txt /tmp/requirements.txt
+ADD examples/wsgi/requirements.txt /tmp/requirements.txt
 RUN pip install -r /tmp/requirements.txt
 
-ADD httpd.conf /usr/local/apache2/conf/httpd.conf
-ADD app.py wsgi.py /var/flask/
+ADD . /tmp/latest
+RUN pip install -e /tmp/latest --upgrade
+
+ADD examples/wsgi/httpd.conf /usr/local/apache2/conf/httpd.conf
+ADD examples/wsgi/app.py examples/wsgi/wsgi.py /var/flask/
