--- a/examples/uwsgi/Dockerfile
+++ b/examples/uwsgi/Dockerfile
@@ -2,10 +2,13 @@ FROM python:3.7-alpine
 
 RUN apk add --no-cache gcc musl-dev linux-headers
 
-ADD requirements.txt /tmp/requirements.txt
+ADD examples/uwsgi/requirements.txt /tmp/requirements.txt
 RUN pip install -r /tmp/requirements.txt
 
-ADD server.py config.py /var/flask/
+ADD . /tmp/latest
+RUN pip install -e /tmp/latest --upgrade
+
+ADD examples/uwsgi/server.py /var/flask/
 WORKDIR /var/flask
 
 ENV prometheus_multiproc_dir /tmp
