Allow the Gunicorn metrics to be exposed on the same Flask app

--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,9 @@ jobs:
     env: TEST_NAME=gunicorn
 
   - <<: *integration-stage
+    env: TEST_NAME=gunicorn-internal
+
+  - <<: *integration-stage
     env: TEST_NAME=uwsgi
 
   - <<: *integration-stage
