--- a/.travis.yml
+++ b/.travis.yml
@@ -42,6 +42,9 @@ jobs:
     env: TEST_NAME=uwsgi
 
   - <<: *integration-stage
+    env: TEST_NAME=uwsgi-lazy-apps
+
+  - <<: *integration-stage
     env: TEST_NAME=wsgi
 
   - <<: *integration-stage
