Add Gunicorn app factory test to Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -39,6 +39,9 @@ jobs:
     env: TEST_NAME=gunicorn-internal
 
   - <<: *integration-stage
+    env: TEST_NAME=gunicorn-app-factory
+
+  - <<: *integration-stage
     env: TEST_NAME=uwsgi
 
   - <<: *integration-stage
