--- a/.travis.yml
+++ b/.travis.yml
@@ -58,8 +58,8 @@ jobs:
   - <<: *integration-stage
     env: TEST_NAME=restful-with-blueprints
 
-  - <<: *integration-stage
-    env: TEST_NAME=restplus-default-metrics
+#  - <<: *integration-stage
+#    env: TEST_NAME=restplus-default-metrics
 
   - <<: *integration-stage
     env: TEST_NAME=reload
