Add for_app_factory() class method to use with app factory pattern
Fixes #52

--- a/examples/pytest-app-factory/Dockerfile
+++ b/examples/pytest-app-factory/Dockerfile
@@ -1,9 +1,12 @@
 FROM python:3.8-alpine
 
-RUN pip install flask prometheus_flask_exporter pytest
+RUN pip install flask pytest
+
+ADD . /tmp/latest
+RUN pip install -e /tmp/latest --upgrade
 
 ENV prometheus_multiproc_dir=/tmp
 ENV PYTHONPATH=/data
 
-ADD . /data
+ADD ./examples/pytest-app-factory /data
 WORKDIR /data
