Support for Connexion with dedicated response converter
Fixes #61

--- a/.travis.yml
+++ b/.travis.yml
@@ -56,6 +56,9 @@ jobs:
     env: TEST_NAME=wsgi
 
   - <<: *integration-stage
+    env: TEST_NAME=connexion-pydantic
+
+  - <<: *integration-stage
     env: TEST_NAME=restful-with-blueprints
 
   - <<: *integration-stage
