Use default JSON mimetype for Connexion and allow override
Fixes #64

--- a/examples/connexion-pydantic/my_api.yaml
+++ b/examples/connexion-pydantic/my_api.yaml
@@ -10,3 +10,13 @@ paths:
       responses:
         '200':
           description: Test
+  /plain:
+    get:
+      operationId: endpoint.plain
+      responses:
+        '200':
+          description: Plain
+          content:
+            text/plain:
+              schema:
+                type: string
