--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ before_script:
 script:
   # python tests
   - python -m coverage run --branch --source=prometheus_flask_exporter -m unittest discover -s tests -v
-after_success:
+after_script:
   # coverage reports
   - python -m coverage report -m
   - python -m coverage xml
@@ -35,7 +35,7 @@ jobs:
     stage: integration
     sudo: true
     before_script: skip
-    after_success: skip
+    after_script: skip
     script:
       - sh examples/${TEST_NAME}/run_tests.sh
     env: TEST_NAME=gunicorn
@@ -73,7 +73,7 @@ jobs:
   - stage: deploy
     script: skip
     before_script: skip
-    after_success: skip
+    after_script: skip
     before_deploy:
       - pip install setuptools wheel twine
     deploy:
@@ -87,6 +87,6 @@ jobs:
 
   - stage: verify
     before_script: skip
-    after_success: skip
+    after_script: skip
     script:
       - pip install prometheus-flask-exporter
