--- a/.travis.yml
+++ b/.travis.yml
@@ -68,6 +68,9 @@ jobs:
     env: TEST_NAME=restplus-default-metrics
 
   - <<: *integration-stage
+    env: TEST_NAME=flask-httpauth
+
+  - <<: *integration-stage
     env: TEST_NAME=reload
 
   - stage: deploy
