--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: python
 dist: xenial
 python:
+- '3.9-dev'
 - '3.8'
 - '3.7'
 - '3.6'
@@ -24,7 +25,7 @@ after_script:
   - python -m coverage report -m
   - python -m coverage xml
   - |
-    if [[ "$(python --version 2>&1)" = *3.8* ]]; then
+    if [[ "$(python --version 2>&1)" = *3.9* ]]; then
       coveralls || exit 0
       ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT || exit 0
     fi
