Allow old env var for backward compatibility

--- a/examples/gunicorn-app-factory/Dockerfile
+++ b/examples/gunicorn-app-factory/Dockerfile
@@ -13,5 +13,6 @@ ADD examples/gunicorn-app-factory/server.py \
 WORKDIR /var/flask
 
 ENV PROMETHEUS_MULTIPROC_DIR /tmp
+ENV prometheus_multiproc_dir /tmp
 
 CMD gunicorn -c config.py -w 4 -b 0.0.0.0:4000 server:app
