--- a/examples/pytest-app-factory/Dockerfile
+++ b/examples/pytest-app-factory/Dockerfile
@@ -6,6 +6,7 @@ ADD . /tmp/latest
 RUN pip install -e /tmp/latest --upgrade
 
 ENV PROMETHEUS_MULTIPROC_DIR=/tmp
+ENV prometheus_multiproc_dir /tmp
 ENV PYTHONPATH=/data
 
 ADD ./examples/pytest-app-factory /data
