--- a/examples/uwsgi-connexion/Dockerfile
+++ b/examples/uwsgi-connexion/Dockerfile
@@ -11,6 +11,7 @@ ADD examples/uwsgi-connexion /var/flask
 WORKDIR /var/flask
 
 ENV PROMETHEUS_MULTIPROC_DIR /tmp
+ENV prometheus_multiproc_dir /tmp
 ENV METRICS_PORT 9200
 
 CMD uwsgi --http 0.0.0.0:4000 --module main:app --master --processes 4 --threads 2
