--- a/examples/uwsgi-lazy-apps/Dockerfile
+++ b/examples/uwsgi-lazy-apps/Dockerfile
@@ -12,5 +12,6 @@ ADD examples/uwsgi-lazy-apps/server.py /var/flask/
 WORKDIR /var/flask
 
 ENV PROMETHEUS_MULTIPROC_DIR /tmp
+ENV prometheus_multiproc_dir /tmp
 
 CMD uwsgi --http 0.0.0.0:4000 --module server:app --master --processes 4 --threads 2 --lazy-apps
