--- a/examples/pytest-app-factory/Dockerfile
+++ b/examples/pytest-app-factory/Dockerfile
@@ -5,7 +5,7 @@ RUN pip install flask pytest
 ADD . /tmp/latest
 RUN pip install -e /tmp/latest --upgrade
 
-ENV PROMETHEUS_MULTIPROC_DIR=/tmp
+ENV PROMETHEUS_MULTIPROC_DIR /tmp
 ENV prometheus_multiproc_dir /tmp
 ENV PYTHONPATH=/data
 
