NONE: Fix wsgi tests

--- a/examples/wsgi/httpd.conf
+++ b/examples/wsgi/httpd.conf
@@ -546,7 +546,7 @@ SSLRandomSeed startup builtin
 SSLRandomSeed connect builtin
 </IfModule>
 
-LoadModule wsgi_module "/usr/local/lib/python2.7/dist-packages/mod_wsgi/server/mod_wsgi-py27.so"
+LoadModule wsgi_module "/usr/local/lib/python3.9/dist-packages/mod_wsgi/server/mod_wsgi-py39.cpython-39-x86_64-linux-gnu.so"
 WSGIPythonHome "/usr"
 
 WSGISocketPrefix /var/run/wsgi
