--- a/examples/wsgi/Dockerfile
+++ b/examples/wsgi/Dockerfile
@@ -2,7 +2,7 @@ FROM httpd
 
 RUN apt-get update \
     && apt-get install --no-install-recommends -y \
-        python python-dev python-setuptools python-pip \
+        python3 python3-dev python3-setuptools python3-pip \
         libapr1-dev libaprutil1-dev gcc \
     && pip install mod_wsgi
 
