--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -9,7 +9,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [2.7, 3.5, 3.6, 3.7, 3.8, 3.9]
+        python-version:
+          - '3.6'
+          - '3.7'
+          - '3.8'
+          - '3.9'
+          - '3.10'
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python-version }}
@@ -25,7 +30,7 @@ jobs:
         run: |
           python -m coverage run --branch --source=prometheus_flask_exporter -m unittest discover -s tests -v
       - name: Upload coverage report
-        if: always() && matrix.python-version == '3.9'
+        if: always() && matrix.python-version == '3.10'
         run: |
           coveralls --service=github
         env:
