--- a/examples/connexion-pydantic/Dockerfile
+++ b/examples/connexion-pydantic/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.11-alpine
 
-RUN apk add --no-cache curl && pip install flask connexion pydantic prometheus_client
+RUN apk add --no-cache curl && pip install flask==2.2.4 connexion pydantic prometheus_client
 
 ADD . /tmp/latest
 RUN pip install -e /tmp/latest --upgrade
