--- a/examples/wsgi/httpd.conf
+++ b/examples/wsgi/httpd.conf
@@ -546,8 +546,8 @@ SSLRandomSeed startup builtin
 SSLRandomSeed connect builtin
 </IfModule>
 
-LoadModule wsgi_module "/usr/local/lib/python3.9/dist-packages/mod_wsgi/server/mod_wsgi-py39.cpython-39-x86_64-linux-gnu.so"
-WSGIPythonHome "/usr"
+LoadModule wsgi_module "/usr/local/apache2/venv/lib/python3.11/site-packages/mod_wsgi/server/mod_wsgi-py311.cpython-311-x86_64-linux-gnu.so"
+WSGIPythonHome "/usr/local/apache2/venv"
 
 WSGISocketPrefix /var/run/wsgi
 
