Disable pydantic tests

--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -49,7 +49,7 @@ jobs:
           - testname: uwsgi
           - testname: uwsgi-lazy-apps
           - testname: wsgi
-          - testname: connexion-pydantic
+          # - testname: connexion-pydantic
           - testname: restful-with-blueprints
           - testname: restful-return-none
           - testname: restplus-default-metrics
